syntax = "proto3";

package pb;

import "memory.proto";

message CPU {
  string brand = 1;
  string name = 2;
  uint32 number_cors = 3;
  uint32 number_threads = 4;
  double max_ghz = 5;
  double min_ghz = 6;
}

message GPU {
  string brand = 1;
  string name = 2;
  double max_ghz = 5;
  double min_ghz = 6;
  Memory memory = 7;
}